# metadata

./: .gitignore  Jenkinsfile  README.md  docker-compose.yml
.jenkins/: docker-compose.yml
web/: Dockerfile  nginx.conf  requirements.txt
web/atlas_meta/: docker-entrypoint.sh  docker-wait.sh  manage.py  pyproject.toml  uwsgi.ini
web/atlas_meta/atlas/: admin.py  models.py  serializers.py  urls.py  views.py
web/atlas_meta/atlas/management/: __init__.py
web/atlas_meta/atlas/migrations/: 0001_initial.py  0002_initial_data.py  0003_initial_user.py  0004_auto_20160407_1213.py  0005_auto_20160407_1213.py  0006_nap_meetbouten.py  0007_ovv_gebieden.py
web/atlas_meta/atlas/templates/rest_framework/: api.html
web/atlas_meta/atlas/tests/: factories.py  test_views.py
web/atlas_meta/atlas_meta/: settings.py  settings_databases.py  urls.py  wsgi.py
web/atlas_meta/datapunt_generic/generic/: admin_mixins.py  analyzers.py  csv.py  database.py  geo.py  index.py  kadaster.py  mixins.py  rest.py  uva2.py
web/atlas_meta/datapunt_generic/generic/tests/: test_uva2.py
web/atlas_meta/datapunt_generic/health/: urls.py  views.py
