[tool.poetry]
name = "metadata"
version = "0.1.0"
description = "Project to store metadata for dataset imports. It has API endpoints to update this metadata from other projects, and an enpoint to fetch a html template that contains the stored data."
authors = ["DataDiensten"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
markdown = "^3.6"
coverage = "^7.5.3"
django-braces = "^1.15.0"
django-cors-headers = "^4.3.1"
django-extensions = "^3.2.3"
django-filter = "^24.2"
djangorestframework = "^3.15.1"
django-shotgun = "^0.2"
drf-extensions = "^0.7.1"
drf-hal-json = "^0.10.0"
drf-nested-fields = "^0.9.5"
factory-boy = "^3.3.0"
faker = "^25.8.0"
psycopg2-binary = "^2.9.9"
pyslack-real = "^0.6.0"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.1"
requests = "^2.32.3"
six = "^1.16.0"
sphinx-me = "^0.3"
sqlparse = "^0.5.0"
tqdm = "^4.66.4"
urllib3 = "^2.2.1"
gunicorn = "^22.0.0"
django-debug-toolbar = "^4.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
